--- a/appcompat/build.gradle
+++ b/appcompat/build.gradle
@@ -23,7 +23,7 @@ android {
 }
 
 dependencies {
-    compile project(path: ':anvil-kotlin', configuration: 'sdk15Release')
+    compile project(path: ':anvil', configuration: 'sdk15Release')
     compile "co.trikita:anvil-sdk15:$anvil_version"
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile "co.trikita:anvil-appcompat-v7:$anvil_version"
