SDK15, SDK19, SDK21, AppCompat, Support, RecyclerView, GridLayout, CardView and Design added.

--- a/design/build.gradle
+++ b/design/build.gradle
@@ -17,6 +17,9 @@ android {
 dependencies {
     compile "co.trikita:anvil-sdk15:$anvil_version"
     compile "com.github.graknol.AnvilKotlin:anvil:$anvilkotlin_version:sdk15Release@aar"
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile "co.trikita:anvil-appcompat-v7:$anvil_version"
+    compile "com.github.graknol.AnvilKotlin:appcompat:$anvilkotlin_version"
+    compile "com.github.graknol.AnvilKotlin:support:$anvilkotlin_version"
+    compile "com.github.graknol.AnvilKotlin:recyclerview:$anvilkotlin_version"
+    compile 'com.android.support:design:23.3.0'
+    compile "co.trikita:anvil-design:$anvil_version"
 }
