--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.anvilkotlin_version = "1.0"
     ext.anvil_version = "0.3.6"
     ext.kotlin_version = '1.0.1-2'
     repositories {
@@ -18,6 +19,7 @@ allprojects {
     repositories {
         jcenter()
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
