--- a/support/build.gradle
+++ b/support/build.gradle
@@ -16,7 +16,7 @@ android {
 
 dependencies {
     compile "co.trikita:anvil-sdk15:$anvil_version"
-    compile "com.github.graknol.AnvilKotlin:anvil:$anvilkotlin_version:sdk15Release@aar"
+    compile project(path: ":anvil", configuration: "sdk15Release")
     compile 'com.android.support:support-v4:23.3.0'
     compile "co.trikita:anvil-support-v4:$anvil_version"
 }
