Added kotlin stuff to build.gradle

--- a/anvil/build.gradle
+++ b/anvil/build.gradle
@@ -26,6 +26,9 @@ android {
             minSdkVersion 21
         }
     }
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
 }
 
 dependencies {
