--- a/design/build.gradle
+++ b/design/build.gradle
@@ -17,12 +17,12 @@ android {
     }
 }
 
-dependencies {
-    compile "co.trikita:anvil-sdk15:$anvil_version"
-    compile project(path: ":anvil", configuration: "sdk15Release")
-    compile project(":appcompat")
-    compile project(":support")
-    compile project(":recyclerview")
-    compile 'com.android.support:design:23.3.0'
-    compile "co.trikita:anvil-design:$anvil_version"
-}
+//dependencies {
+//    compile "co.trikita:anvil-sdk15:$anvil_version"
+//    compile project(path: ":anvil", configuration: "sdk15Release")
+//    compile project(":appcompat")
+//    compile project(":support")
+//    compile project(":recyclerview")
+//    compile 'com.android.support:design:23.3.0'
+//    compile "co.trikita:anvil-design:$anvil_version"
+//}
