--- a/anvil/build.gradle
+++ b/anvil/build.gradle
@@ -31,8 +31,8 @@ android {
     }
 }
 
-dependencies {
-    sdk15Compile "co.trikita:anvil-sdk15:$anvil_version"
-    sdk19Compile "co.trikita:anvil-sdk19:$anvil_version"
-    sdk21Compile "co.trikita:anvil-sdk21:$anvil_version"
-}
+//dependencies {
+//    sdk15Compile "co.trikita:anvil-sdk15:$anvil_version"
+//    sdk19Compile "co.trikita:anvil-sdk19:$anvil_version"
+//    sdk21Compile "co.trikita:anvil-sdk21:$anvil_version"
+//}
