--- a/cardview/build.gradle
+++ b/cardview/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     compile project(path: ":anvil", configuration: "sdk15Release")
     compile 'com.android.support:cardview-v7:23.3.0'
     compile "co.trikita:anvil-cardview-v7:$anvil_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
