--- a/support/build.gradle
+++ b/support/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     compile project(path: ":anvil", configuration: "sdk15Release")
     compile 'com.android.support:support-v4:23.3.0'
     compile "co.trikita:anvil-support-v4:$anvil_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
