Getting real tired of this...

--- a/anvil/build.gradle
+++ b/anvil/build.gradle
@@ -35,7 +35,7 @@ android {
 }
 
 dependencies {
-    compile "co.trikita:anvil-sdk15:$anvil_version"
+    //compile "co.trikita:anvil-sdk15:$anvil_version"
     sdk15Compile "co.trikita:anvil-sdk15:$anvil_version"
     sdk19Compile "co.trikita:anvil-sdk19:$anvil_version"
     sdk21Compile "co.trikita:anvil-sdk21:$anvil_version"
