--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.0.2'
     ext.anvil_version = "0.3.6"
-    ext.kotlin_version = '1.0.1-2'
     repositories {
         jcenter()
         mavenCentral()
